--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,4 +1,7 @@
 {
+  "上传文件": "Upload File",
+  "刷新": "Refresh",
+  "刷新目录": "Refresh Directory",
   "复制成功": "Copy successful",
   "复制": "Copy",
   "新建": "New",
