--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -1,4 +1,7 @@
 {
+  "上传文件": "上传文件",
+  "刷新": "刷新",
+  "刷新目录": "刷新目录",
   "复制成功": "复制成功",
   "复制": "复制",
   "新建": "新建",
@@ -190,7 +193,7 @@
   "设置": "设置",
   "退出": "退出",
   "空文件": "空文件",
-  "本地文件": "本地文件",
+  "本地上传": "本地上传",
   "文件夹": "文件夹",
   "文件名": "文件名",
   "请输入文件名": "请输入文件名",
@@ -403,7 +406,7 @@
   "全部任务": "全部任务",
   "关联订阅": "关联订阅",
   "订阅": "订阅",
-  "创建": "创建",
+  "创建": "添加新文件",
   "同时删除关联任务和脚本": "同时删除关联任务和脚本",
   "未找到": "未找到",
   "保存成功": "保存成功",
