--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,4 +1,6 @@
 {
+  "注册调用": "Register API",
+  "调用管理": "Action Management",
   "上传文件": "Upload File",
   "刷新": "Refresh",
   "刷新目录": "Refresh Directory",
